# clingo_ast_util

./: README.md  clingo_ast_util.py  setup.cfg  setup.py
clingo_ast_util/: __init__.py
