[metadata]
name = clingo_ast_util
version = 1.0.0
description = Clingo AST utilities
long_description = file: README.rst
url = https://github.com/NickHippen/clingo_ast_util
download_url = https://github.com/NickHippen/clingo_ast_util/archive/clingo_ast_util.tar.gz
author = NickHippen
author_email = nhippen@unomaha.edu
license = MIT
keywords = clingo, asp, ast

[options]
python_requires = >3.2
packages = find:

[bdist_wheel]
universal=1
